--- a/AEM/src/index.html
+++ b/AEM/src/index.html
@@ -14,15 +14,23 @@
                         <h2>Adobe Experience Manager</h2>
                     </div>
                     <div class="aem-content">
-                        <div class="aem-content_button-wrap">
+                        <div class="aem-content_title">
+                            <h3>Go To Author</h3>
+                        </div>
+                        <div class="aem-content_button-wrap" style="border-bottom: 1px solid #ffe0ca">
                             <button id="aem-sites" class="aem-content_button">Sites</button>
                             <button id="aem-editor" class="aem-content_button">Editor</button>
                             <button id="aem-preview" class="aem-content_button">Preview</button>
                         </div>
+                        <div class="aem-content_title">
+                            <h3>Go To QAWEB</h3>
+                        </div>
+                        <div class="aem-content_button-wrap">
+                            <button id="aem-preqa" class="aem-content_button">Pre-QA</button>
+                            <button id="aem-preqa3" class="aem-content_button">Pre-QA3 (CN 전용)</button>
+                            <button id="aem-qaweb" class="aem-content_button">QAWEB</button>
+                        </div>
                     </div>
-                    <!-- 각 서버로 이동하는거 만들어야함 -->
-                    <!-- QAWEB -->
-                    <!-- Preqa -->
                 </div>
             </div>
         </main>
